Revert "bottles by User ID"
This reverts commit 28f54a231eae3afd134a67dc776a18d9904e0bca.
