# docs/swagger.json
@@ -1322,41 +1322,6 @@
                 }
             }
         },
-        "/users/{userId}/bottles": {
-            "get": {
-                "description": "Get all bottles associated with a specific user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "bottles"
-                ],
-                "summary": "Get all bottles by user ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/database.Bottle"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/water_transactions": {
             "get": {
                 "description": "Get all water transactions",
@@ -2231,41 +2196,6 @@
                 }
             }
         },
-        "database.Bottle": {
-            "type": "object",
-            "properties": {
-                "active": {
-                    "type": "boolean"
-                },
-                "fillVolume": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "nfcid": {
-                    "type": "string"
-                },
-                "pathImage": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "userID": {
-                    "type": "integer"
-                },
-                "waterTransactions": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/database.WaterTransaction"
-                    }
-                },
-                "waterType": {
-                    "type": "string"
-                }
-            }
-        },
         "database.ConsumerTestAnswer": {
             "type": "object",
             "properties": {
@@ -2308,35 +2238,6 @@
                     "type": "integer"
                 },
                 "text": {
-                    "type": "string"
-                }
-            }
-        },
-        "database.WaterTransaction": {
-            "type": "object",
-            "properties": {
-                "bottleID": {
-                    "type": "integer"
-                },
-                "guest": {
-                    "type": "boolean"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "stationID": {
-                    "type": "integer"
-                },
-                "timestamp": {
-                    "type": "string"
-                },
-                "userID": {
-                    "type": "integer"
-                },
-                "volume": {
-                    "type": "integer"
-                },
-                "waterType": {
                     "type": "string"
                 }
             }
